# DG_MPI

./: 1D_advection.out  1D_advection_sin.cc  1D_advection_sin.out  1D_wave.cc  1D_wave.out  1D_wave_equation.cc  2D_advection  2D_advection.cc  2D_advection.out  2D_advection_gaussian.cc  2D_advection_gaussian.out  2x1v_Inflow.cc  2x1v_moments_Inflow_Adp.cc  2x1v_moments_Inflow_Adp.out  2x1v_moments_wall_Adp.cc  2x1v_moments_wall_Adp.out  2x3v_MS.cc  2x3v_MS.out  2x3v_heated_cavity_Adp.cc  2x3v_heated_cavity_Adp.out  2x3v_moments.cc  2x3v_moments.out  2x3v_moments_HC.cc  2x3v_moments_HC.out  2x3v_moments_HC_Adp.cc  2x3v_moments_HC_Adp.out  CMakeCache.txt  CMakeLists.txt  Makefile  adjoint  callgrind.out.18274  cmake_install.cmake  convergence_table.txt  convergence_table_temp.txt  convergence_table_uniform.txt  error  error_gaussian.txt  error_sin.txt  grid  grid0  (+39 more)
1D_advection_sin/: error_gaussian.txt  error_sin.txt  result0.txt
1D_wave/: convergence_table_adaptive.txt  convergence_table_uniform.txt  error_grid_cycle0.txt  error_grid_cycle1.txt  error_grid_cycle10.txt  error_grid_cycle2.txt  error_grid_cycle3.txt  error_grid_cycle4.txt  error_grid_cycle5.txt  error_grid_cycle6.txt  error_grid_cycle7.txt  error_grid_cycle8.txt  error_grid_cycle9.txt  error_observed_cycle0.txt  error_observed_cycle1.txt  error_observed_cycle10.txt  error_observed_cycle2.txt  error_observed_cycle3.txt  error_observed_cycle4.txt  error_observed_cycle5.txt  error_observed_cycle6.txt  error_observed_cycle7.txt  error_observed_cycle8.txt  error_observed_cycle9.txt  grid0  grid1  grid10  grid2  grid3  grid4  grid5  grid6  grid7  grid8  grid9  resultAdj_cycle0.txt  resultAdj_cycle1.txt  resultAdj_cycle10.txt  resultAdj_cycle2.txt  resultAdj_cycle3.txt  (+17 more)
1v_Moments/: adjoint1D.nb  develop_System.m  develop_System.m~  develop_System_Odd_Sigma.m  dvlp_BWall1D.m  dvlp_penalty.m  hc_1D.nb
2D_advection_gaussian/: convergence_table_adaptive.txt  convergence_table_uniform.txt  error.txt  error_cycle0.txt  error_cycle1.txt  error_cycle2.txt  error_cycle3.txt  error_observed_cycle0.txt  error_observed_cycle1.txt  error_observed_cycle10.txt  error_observed_cycle11.txt  error_observed_cycle12.txt  error_observed_cycle13.txt  error_observed_cycle14.txt  error_observed_cycle15.txt  error_observed_cycle16.txt  error_observed_cycle17.txt  error_observed_cycle18.txt  error_observed_cycle19.txt  error_observed_cycle2.txt  error_observed_cycle20.txt  error_observed_cycle21.txt  error_observed_cycle22.txt  error_observed_cycle3.txt  error_observed_cycle4.txt  error_observed_cycle5.txt  error_observed_cycle6.txt  error_observed_cycle7.txt  error_observed_cycle8.txt  error_observed_cycle9.txt  error_predicted_cycle0.txt  error_predicted_cycle1.txt  error_predicted_cycle10.txt  (+80 more)
src/: ic_bc_base.cc  (+6 more)
(+948 files in other folders)
